--- a/styles.css
+++ b/styles.css
@@ -88,26 +88,118 @@ margin-left: 100px;
   max-height: 600px;
 }
 
-button{
+.myBtn_multi{
+  background-color: #B0E0E6;
+      border: none;
+      color: black;
+      padding: 15px 32px;
+      text-align: center;
+      text-decoration: none;
+      display:block;
+      font-size: 16px;
+      margin: 4px 2px;
+      cursor: pointer;
+      width: 200px;
+      border-radius: 4px;
+}
+
+.ops-button{
+  background-color: #191970;
+  border: none;
+  color: White;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display:block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  width: 200px;
+  border-radius: 4px;
+}
+
+.content-ops{
   margin-left: auto;
   margin-right: auto;
-  display: block;
-  background: white;
+  width:100px;
 }
-.Content-button{
-  background-color: #dd4b39;
+
+.content5{
   width: 100%;
   height:100%;
   /* border: 1px solid black; */
   padding: 20px;
+  color:#17252A;
+    background-color: #191970;
 }
+/* Modal-------*?
+
+/* Modal */
+
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+
+}
+
+.modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+}
+
+/* The Close Button */
+.close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+
+/* end------------*/
 
 /* imgage-splitter */
 
 .img-comp-container {
   position: relative;
   height: 500px; /*should be the same height as the images*/
-  border: 1px solid #def2f1;
+  border: 1px solid #def2f1;;
   max-width: 700px;
   padding: 0;
   margin-left: auto;
